use_undefined_identifier/c1/SwitchColor
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/SwitchColor/src/crazy.c:662:8: error: use of undeclared identifier 'dword_4145D0'
return dword_4145D0[piece]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/SwitchColor/src/obj/crazy.o] Error 1
